@@ -1,22 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-2.out
-mkdir smidump-2.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: dumping again from previous output and comparing."
-    ../tools/smidump -l0 -fsming smidump-1.out/$mib.sming > smidump-2.out/$mib.sming
-    if [ $? -ne 0 ] ; then
-	echo "see directory smidump-2.out for results on $mib."
-        RC=1
-    fi
-    cmp -s smidump-1.out/$mib.sming smidump-2.out/$mib.sming
-    if [ $? -ne 0 ] ; then
-	RC=1
-	echo "smidump-1 and smidump-2 output for $mib differs."
-    fi
-done
-
-exit ${RC}
