@@ -1,21 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-6.out
-mkdir smidump-6.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: comparing \`smidump -f imports' output with dumps/$mib.imports."
-    for d in `echo ${SMIPATH} | tr ':' ' '` ; do
-	if [ -f $d/$mib ] ; then break ; fi
-    done 
-    ../tools/smidump -f imports $mib > smidump-6.out/$mib.imports
-    WC=`diff -I smidump --ignore-blank-lines smidump-6.out/$mib.imports dumps/$mib.imports | wc -l`
-    if [ $WC -ne 0 ] ; then
-	echo "smidump -f imports output for $mib differs from dump/$mib.imports."
-	RC=1
-    fi
-done
-
-exit ${RC}
